--- a/src/BlazorBootstrap.Modal/UI/BootstrapModal.razor
+++ b/src/BlazorBootstrap.Modal/UI/BootstrapModal.razor
@@ -3,14 +3,17 @@
 <div class="modal-backdrop fade @(IsVisible ? "d-block show": "d-none")" @onclick="@CloseModal"></div>
 
 <div class="modal fade @(IsVisible ? "d-block show": "d-none")" tabindex="-1" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog @(ModalService.Configuration.Size)" role="document">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="modalTitle">@Title</h5>
-                <button type="button" class="close" aria-label="Close" @onclick="@CloseModal">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
+            @if (ModalService.Configuration.ShowHeader)
+            {
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalTitle">@Title</h5>
+                    <button type="button" class="close" aria-label="Close" @onclick="@CloseModal">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            }
             <div class="modal-body">
                 @Content
             </div>
